@@ -112,7 +112,6 @@ async function getBasicDomainInfo() {
   ps.addCommand(getInfo);
   logger.info(`Invoked PS Command: getBasicDomainInfo()`);
   let output = await ps.invoke();
-  logger.debug(`Got basic domain info: ${output}`);
   return JSON.parse(output);
 }
 
